# cv_works

./: .gitignore  CMakeLists.txt  CMakeLists_.txt
src/: CMakeLists.txt  interactiveColorSegment.cc  main.cc  read_data.cc  utils.cc  utils.h
src/utils/: CMakeLists.txt  interactiveColorSegment.cc  read_data.cc  utils.cc  utils.h
tests/: CMakeLists.txt  ExampleTests.cc
